--- a/framew/src/main/res/values/colors.xml
+++ b/framew/src/main/res/values/colors.xml
@@ -66,7 +66,6 @@
     <color name="orchid">#DA70D6</color>  <!-- 淡紫色 -->
     <color name="thistle">#D8BFD8</color>   <!-- 蓟色 -->
     <color name="lightgray">#D3D3D3</color>  <!-- 亮灰色 -->
-    <color name="lightgrey">#D3D3D3</color>  <!-- 亮灰色 -->
     <color name="tan">#D2B48C</color>  <!-- 茶色 -->
     <color name="chocolate">#D2691E</color> <!-- 巧可力色 -->
     <color name="peru">#CD853F</color> <!-- 秘鲁色 -->
@@ -98,7 +97,6 @@
     <color name="blueviolet">#8A2BE2</color> <!-- 紫罗兰蓝色 -->
     <color name="lightskyblue">#87CEFA</color>  <!-- 亮天蓝色 -->
     <color name="skyblue">#87CEEB</color> <!-- 天蓝色 -->
-    <color name="gray">#808080</color> <!-- 灰色 -->
     <color name="grey">#808080</color>  <!-- 灰色 -->
     <color name="olive">#808000</color> <!-- 橄榄色 -->
     <color name="purple">#800080</color>  <!-- 紫色 -->
@@ -146,7 +144,7 @@
     <color name="green">#008000</color>  <!-- 绿色 -->
     <color name="darkgreen">#006400</color> <!-- 暗绿色 -->
     <color name="blue">#0000FF</color>  <!-- 蓝色 -->
-    <color name="mediumblue">#0000CD</color> <!-- 中兰色 -->
+    <color name="mediumblue">#1A1A94</color> <!-- 中兰色 -->
     <color name="darkblue">#00008B</color>   <!-- 暗蓝色 -->
     <color name="navy">#000080</color>  <!-- 海军色 -->
     <color name="black">#000000</color> <!-- 黑色 -->
